Update nested actions
- Clean up and update layout
- Pagination added
- Meta video information being displayed
- Nested controller actions and routes updated
- Estimated time and progress bar
- ngf-validation added on front end
- Adding integration tests

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
-
+/*
 .progress {
     display: inline-block;
     width: 100px;
@@ -26,4 +26,29 @@
     font-size: smaller;
     background: green;
     width: 0;
+}*/
+
+.embedded_video {
+  height: 400px;
+  width: 400px;
+}
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
 }
