--- a/app/views/videos/_form.html.haml
+++ b/app/views/videos/_form.html.haml
@@ -7,13 +7,16 @@
           %li= msg
   = f.input :title, input_html: { "ng-model" => "title" }
   = f.input :description, input_html: { "ng-model" => "description" }
-  = f.input :video_file, as: :file, input_html: { "ngf-select" => "uploadFiles($files, $invalidFiles)", "ng-model" => "video_file" }
-  Files:
-  %ul
-    %li{"ng-repeat" => "f in files", :style => "font:smaller"}
-      {{f.name}} {{f.$errorParam}}
-      %span.progress{"ng-show" => "f.progress >= 0"}
-        %div{"ng-bind" => "f.progress + '%'", :style => "width:{{f.progress}}%"}
-    %li{"ng-repeat" => "f in errFiles", :style => "font:smaller"}
+  %span.btn.btn-info.btn-file
+    = f.input :video_file, as: :file, label: "Click to choose and upload file", input_html: { "ngf-select" => "uploadFiles($files, $invalidFiles)", "ng-model" => "video_file", "ngf-pattern" => "'video/mp4'", "ngf-model-invalid" => "invalidFile"}
+  %h4 Files:
+  %div.alert.alert-danger{"ng-show" => "invalidFile.$error === 'pattern'"} Oops, only mp4 video files are allowed
+  %ul.list-group
+    %li.list-group-item{"ng-repeat" => "f in files track by $index", :style => "font:smaller"}
+      {{f.name}} {{f.$errorParam}} 
+      %div.progress{"ng-show" => "f.progress >= 0"}
+        %div.progress-bar{"role" => "progress-bar", "ng-bind" => "f.progress + '%'", :style => "width:{{f.progress}}%"}
+      %div.label.label-warning{ "ng-bind" => "'Time left (msec): ' + estimatedTimes[$index]" }
+    %li.list-group-item{"ng-repeat" => "f in errFiles", :style => "font:smaller"}
       {{f.name}} {{f.$error}} {{f.$errorParam}}
       {{errorMsg}}
