--- a/app/views/videos/edit.html.haml
+++ b/app/views/videos/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @video
+= link_to 'Show', user_video_path(@user, @video)
 \|
-= link_to 'Back', videos_path
+= link_to 'Back', user_videos_path(@user)
