--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,6 @@
     = javascript_include_tag 'application'
     = csrf_meta_tags
   %body{"ng-app" => "videoUploaderApp", "ng-controller" => "videoUploaderCtr"}
-    .row
-      .col-md-10
-        = yield
+    .container
+      = render "navigation/header_menu"
+      = yield
