--- a/app/views/videos/new.html.haml
+++ b/app/views/videos/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New video
+.row
+  .col-md-8
+    %h1 New video
 
-= render 'form'
+    = render 'form'
 
-= link_to 'Back', user_videos_path(@user)
+    = link_to 'Back', user_videos_path(@user)
