--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -1,8 +1,11 @@
 .row
   .col-md-10
+    %p Video title: #{@video.title}
+    %p Video description: #{@video.description}
     %p File Name: #{@video.video_file_file_name}
     %p Content Type: #{@video.video_file_content_type}
     %p File Size: #{@video.video_file_file_size}
+    %p Length: #{@video.length}
 .row
   .col-md-10
     = render partial: 'video_embed', locals: { video_url: @video.video_file.url }
