--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
     = csrf_meta_tags
-  %body{"ng-app" => "videoUploaderApp", "ng-controller" => "videoUploaderCtr"}
+  %body{"ng-app" => "videoUploaderApp"}
     .container
       = render "navigation/header_menu"
       = yield
