--- a/app/views/navigation/_header_menu.html.haml
+++ b/app/views/navigation/_header_menu.html.haml
@@ -7,4 +7,4 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.navbar-brand{:href => "/"} Video List 
+      %a.navbar-brand{:href => user_videos_path(User.first)} Video List 
