Refactor and cleanup
- Delete old JavaScript code that is not being used
- Delete old form(s)
- Delete unused controller action create
- Delete video test fixture from paperclip
- Add new validations for *_name on User
- Amend NOTES_TO_READ

--- a/app/views/videos/edit.html.haml
+++ b/app/views/videos/edit.html.haml
@@ -2,6 +2,7 @@
 
 = render 'edit_form'
 
-= link_to 'Show', user_video_path(@user, @video)
+%br
+= link_to 'Show', user_video_path(@user, @video), { class:  "btn btn-default" }
 \|
-= link_to 'Back', user_videos_path(@user)
+= link_to 'Back', user_videos_path(@user), { class:  "btn btn-info" }
