--- a/app/views/videos/_edit_form.html.haml
+++ b/app/views/videos/_edit_form.html.haml
@@ -1,4 +1,4 @@
-%div{ "ng-controller" => "videoUploaderCtr", "ng-init" => "editInit('#{@user.id}', '#{@video.title}', '#{@video.description}', '#{@video.length}')"}
+%div{ "ng-controller" => "videoUploaderCtr", "ng-init" => "editInit('#{@user.id}', '#{@video.title}', '#{@video.description}', '#{@video.video_filename}', '#{@video.length}')"}
   = simple_form_for [@user, @video], url: url_for(action: :update, controller: :videos), method: :patch do |f|
     - if @video.errors.any?
       #error_explanation
@@ -8,5 +8,6 @@
             %li= msg
     = f.input :title, input_html: { "ng-model" => "title" }
     = f.input :description, input_html: { "ng-model" => "description" }
+    = f.input :video_filename, input_html: { "ng-model" => "video_filename" }
     = f.input :length, input_html: { "ng-model" => "length" }
     = f.button :submit
